Fixed widget overlap
Fixed widgets overlapping each other if one on top of the other.

--- a/bin/js2coffee-widget.css
+++ b/bin/js2coffee-widget.css
@@ -108,3 +108,7 @@ pre {
 .code-box {
   position: relative;
 }
+
+.j2cw-js, .j2cw-cs {
+    margin-bottom: 34px;   
+}
